--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,4 +59,32 @@ jobs:
       - store_artifacts:
           path: /tmp/test-results
           destination: test-results
+  deploy:
+      working_directory: ~/repo
+      docker:
+        - image: circleci/ruby:2.4.1-node-browsers
 
+      steps:
+        - checkout
+        - run:
+            name: Setup EB
+            working_directory: /
+            command: |
+              sudo apt-get -y -qq update
+              sudo apt-get install -y python-pip python-dev build-essential
+              sudo pip install 'six>=1.9' 'botocore==1.11.8' awsebcli==3.12.0
+        - run:
+            name: Deploy to EB
+            command: eb deploy SampleApp-env --timeout 20
+
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
