--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
               sudo pip install 'six>=1.9' 'botocore==1.11.8' awsebcli==3.12.0
         - run:
             name: Deploy to EB
-            command: eb deploy SampleApp-env --timeout 20
+            command: eb deploy SampleApp-env-1 --timeout 20
 
 workflows:
   version: 2
