--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
   deploy:
       working_directory: ~/repo
       docker:
-        - image: circleci/ruby:2.4.1-node-browsers
+        - image: circleci/ruby:2.4.1-stretch-node-browsers
 
       steps:
         - checkout
