--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,11 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: sample_app
+  pool: 5
+  username: saa_admin
+  password: <%= ENV.fetch("SAMPLE_APP_DATABASE_PASSWORD")%>
+#  socket: **/opt/local/var/run/mysql5/mysqld.sock**
