--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ development:
   reconnect: false
   database: sample_app_development
   pool: 5
-  username: saa_admin_development
+  username: sa_admin_dev
   password: <%= ENV.fetch("SAMPLE_APP_DATABASE_PASSWORD")%>
 #  socket: **/opt/local/var/run/mysql5/mysqld.sock**
 
@@ -32,6 +32,6 @@ production:
   reconnect: false
   database: sample_app
   pool: 5
-  username: saa_admin
+  username: sa_admin
   password: <%= ENV.fetch("SAMPLE_APP_DATABASE_PASSWORD")%>
 #  socket: **/opt/local/var/run/mysql5/mysqld.sock**
