--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -3,7 +3,7 @@ branch-defaults:
     environment: SampleApp-env
 global:
   application_name: sample_app
-  default_ec2_keyname: registry
+  default_ec2_keyname: null
   default_platform: Ruby 2.5 (Puma)
   default_region: us-east-1
   profile: null
